applications/linkding/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: linkding-linkding-http-https-middleware@kubernetescrd
spec:
  tls:
    - hosts:
        - linkding.tryrocket.cloud
      secretName: tryrocket-cloud-http-tls
  rules:
    - host: linkding.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 80
